# Researchhub-AI

./: .env.example  .gitignore  pyproject.toml
backend/app/config/: settings.py
backend/app/database/: qdrant_client.py  qdrant_db_client.py
backend/app/services/ingestion/: chunker.py  embedder.py  loader.py
backend/app/services/retrieval/: retriever.py
backend/app/utils/: logger.py
backend/tests/: conftest.py  test_chunker.py  test_embedder.py  test_loader.py  test_qdrant.py  test_retriever.py  test_store.py
