[project]
name = "researchhub-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "groq>=0.37.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.5",
    "langsmith>=0.8.16",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
